fixed the spacing

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -412,9 +412,3 @@ a.ogp-card__link--unset:hover {
 .usa-search [type="submit"] {
     background-image: none;
 }
-
-@media screen and (max-width:800px) and (min-width:1000px){
-.mobile-align{
-    margin-left:50px
-}
-}
