--- a/assets/css/main-page.scss
+++ b/assets/css/main-page.scss
@@ -42,7 +42,7 @@ body{
   .article {
     color: #046b99;
     text-decoration: none;
-    font-size: 1.05em;
+    font-size: 0.95em;
     class: ext-link;
     rel: external no follow;
   }
